# learn-by-building

agentic-ai-meeting-scheduler/: .gitignore  booking_bot.py  tempCodeRunnerFile.py  tool_call_example.txt  tool_call_response.txt
agentic-ai-meeting-scheduler/data/: bookings.csv
agentic-ai-meeting-scheduler/tools/: ask_user.py  book_table.py  get_booking_slots.py  tool_use_block.py  tools.py
agentic-ai-meeting-scheduler/tools/schema/: ask_user.json  book_table.json  get_booking_slots.json  mirascope_schema.py
fastapi-and-pydantic/: demo-pythonFASTAPI.md
function-calling-python/: .env.example  logging_config.py  main.py  tools.py
json-rpc-jam/: client.js  package-lock.json  package.json  server.js
mcp-crash-course/groq-integration/: client-simple.py  client.py
mcp-crash-course/simple-server-setup/: pyproject.toml
mcp-py/: info.txt  main.py  mcp.py  pyproject.toml  tools.json
mcp-py/groq/: main.py
mcp-py/mcp-client/: client.py  instructions.txt  pyproject.toml
mcp-py/server/: client.py  weather.json
mcp-python-implementation/: info.txt  pyproject.toml
mcp-python-implementation/server/: weather.json  weather.py
n8n-gmail-automation/: workflow-n8n-gmail.json
