[project]
name = "mcp-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.6.1",
    "gptme>=0.27.0",
    "groq>=0.24.0",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.2.8",
    "mcp[cli]>=1.7.1",
    "tomlkit>=0.13.2",
]

[tool.uv.workspace]
members = [
    "mcp-client",
    "weather",
]
